--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <!-- Notre contenu HTML -->
         <h1>Hello there, welcome to my RPG Game !</h1>
 
-        <!-- <script src="game.js"></script> --> <!-- le type="module" fait appel au ES6 -->
+        <script type="module" src="game.js"></script> <!-- le type="module" fait appel au ES6 -->
         <script type="module" src="./character.js"></script>
-        <script type="module" src="./fighter.js"></script>
+
         <!-- <script src="./paladin.js"></script> -->
         <!-- <script src="./monk.js"></script> -->
         <!-- <script src="./berzerker.js"></script> -->
