--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Hello there, welcome to my RPG Game !</h1>
 
         <script type="module" src="game.js"></script> <!-- le type="module" fait appel au ES6 -->
-        <script type="module" src="./character.js"></script>
+        <!-- <script type="module" src="./character.js"></script> -->
 
     </body>
 </html>
