--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Notre contenu HTML -->
         <h1>Hello there, welcome to my RPG Game !</h1>
 
-        <script type="module" src="game.js"></script> <!-- le type="module" fait appel au ES6 -->
+        <script type="module" src="./game.js"></script> <!-- le type="module" fait appel au ES6 -->
         <!-- <script type="module" src="./character.js"></script> -->
 
     </body>
