--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <!-- Notre contenu HTML -->
-        <h1>Hello there, welcome to my RPG Game !</h1>
+        <h1>Hello there, welcome to my RPG Game ! THE VOID !!! </h1>
+        <p>(Oui il n'y a rien... ce jeu est du vide)</p>
 
         <script type="module" src="./game.js"></script> <!-- le type="module" fait appel au ES6 -->
         <!-- <script type="module" src="./character.js"></script> -->
