--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     </head>
     <body>
         <!-- Notre contenu HTML -->
-        <h1>Hello there, welcome to my RPG Game ! THE VOID !!! </h1>
-        <p>(Oui il n'y a rien... ce jeu est du vide)</p>
-
+        <h1>Hello there, welcome to THE VOID !</h1>
+        <h2>A new revolutional RPG Game 2022 !</h2>
+        <p>(Ah ah ah just kidding. There is no game. Just an empty page...)</p>
+        
         <script type="module" src="./game.js"></script> <!-- le type="module" fait appel au ES6 -->
         <!-- <script type="module" src="./character.js"></script> -->
 
