--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h2>A new revolutional RPG Game 2022 !</h2>
         <p>(Ah ah ah just kidding. There is no game. Just an empty page...)</p>
         
-        <script type="module" src="./game.js"></script> <!-- le type="module" fait appel au ES6 -->
+        <script type="module" src="./perform.js"></script> <!-- le type="module" fait appel au ES6 -->
     </body>
 </html>
